fix: card spacing

--- a/src/Element/Note.css
+++ b/src/Element/Note.css
@@ -27,6 +27,7 @@
 
 .note>.body {
   margin-top: 4px;
+  margin-bottom: 24px;
   padding-left: 56px;
   text-overflow: ellipsis;
   white-space: pre-wrap;
@@ -64,17 +65,6 @@
   margin-top: 12px;
   margin-left: 56px;
 }
-
-@media (min-width: 720px) {
-  .note>.footer {
-    margin-top: 24px;
-  }
-
-  .note>.note-creator {
-    margin-top: 24px;
-  }
-}
-
 
 .thread.note {
   border-bottom-left-radius: 0;
